# app-ideas

./: README.md
bin2dec/: CMakeLists.txt  README.md  bin2dec.cpp  bin2dec.h  main.cpp
github-status/: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h
